--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,31 @@
     <groupId>cn.guruguru</groupId>
     <artifactId>flink-connector-mongo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
+
+    <name>Flink Connector Mongo</name>
+    <description>Flink connector for the MongoDB</description>
+    <url>https://github.com/jinsyin/flink-connector-mongo</url>
+
+    <licenses>
+        <license>
+            <name>The Apache License, Version 2.0</name>
+            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <name>JinsYin</name>
+            <email>jinsyin@163.com</email>
+        </developer>
+    </developers>
+
+    <scm>
+        <url>https://github.com/jinsyin/flink-connector-mongo</url>
+        <connection>scm:git:git://github.com/jinsyin/flink-connector-mongo.git</connection>
+        <developerConnection>scm:git:ssh://github.com:jinsyin/flink-connector-mongo.git</developerConnection>
+    </scm>
 
     <!-- mvn deploy -->
     <!-- see .m2/settings.xml -->
@@ -207,6 +232,63 @@
                 </executions>
             </plugin>
 
+            <!-- Maven JavaDoc Plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.5.0</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <!-- Maven Source Plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.3.0</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <!-- Central Publishing Maven Plugin for publishing components in Maven Central -->
+            <!-- https://central.sonatype.org/publish/publish-portal-maven/ -->
+            <plugin>
+                <groupId>org.sonatype.central</groupId>
+                <artifactId>central-publishing-maven-plugin</artifactId>
+                <version>0.4.0</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <publishingServerId>central</publishingServerId> <!-- The ID of the server in settings.xml -->
+                    <tokenAuth>true</tokenAuth> <!-- use token authentication in settings.xml -->
+                    <checksums>required</checksums> <!-- MD5 and SHA1 checksums  -->
+                </configuration>
+            </plugin>
+            <!-- Maven GPG Plugin -->
+            <!-- https://central.sonatype.org/publish/requirements/gpg/ -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>3.2.2</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
